[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
message-io = { version = "0.14", default-features = false, features = ["websocket"] } 
rusqlite = "0.27.0"
chrono = "0.4"
clap = { version = "3.1.6", features = ["derive"] }

