[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# message-io = { version = "0.14", default-features = false, features = ["websocket"] } 
ws = "0.9.2"
rusqlite = "0.27.0"

# reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
clap = { version = "3.1.6", features = ["derive"] }
regex = "1"
